--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,19 @@
 
 }
 
+.refresh-button{
+  text-align: center;
+  margin: 50px;
+}
+
+.btn{
+  background-color: #4ECCA3;
+  font-size: 2rem;
+  color: white;
+  font-family: 'Lobster', cursive;
+  border-radius: 15px;
+}
+
 body {
   background-color: #393E46;
 }
@@ -18,7 +31,7 @@ h1 {
   margin: 30px;
   font-family: 'Lobster', cursive;
   text-shadow: 5px 0 #232931;
-  font-size: 8rem;
+  font-size: 6rem;
   color: #4ECCA3;
 }
 
